<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_marginLeft="10dp"
 />
    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:layout_marginLeft="250dp"
        />

    <RadioGroup
        android:orientation="horizontal"
        android:id="@+id/rg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title">

        <RadioButton
            android:id="@+id/mr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mr"
            />
        <RadioButton
            android:id="@+id/mrs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mrs"
            />
        <RadioButton
            android:id="@+id/ms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ms"
            />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg2"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gender"
        android:layout_marginLeft="200dp">
        <RadioButton
            android:id="@+id/male"
            android:text="@string/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"/>
    </RadioGroup>
<TextView
    android:id="@+id/fullName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/full_name_as_it_appears_in_your_passport"
    android:layout_below="@id/rg1"
    />
    <TextView
        android:id="@+id/firstN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:layout_below="@+id/fullName"
        android:layout_marginRight="10dp"/>
    <TextView
        android:id="@+id/scondN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_name"
        android:layout_below="@id/fullName"
        android:layout_toRightOf="@id/firstN"
        android:layout_marginRight="10dp"
        />
    <TextView
        android:id="@+id/thirdN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_name"
        android:layout_below="@id/fullName"
        android:layout_toRightOf="@id/scondN"
        android:layout_marginRight="20dp"

        />
    <TextView
        android:id="@+id/sureN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sure_name"
        android:layout_below="@id/fullName"
        android:layout_toRightOf="@id/thirdN"
        />
    <EditText
        android:id="@+id/txtFN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstN"
        android:ems="4"
        android:layout_marginEnd="10dp"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/txtSN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstN"
        android:layout_toEndOf="@id/txtFN"
        android:ems="4"
        android:layout_marginEnd="10dp"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/txtTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstN"
        android:layout_toEndOf="@id/txtSN"
        android:ems="4"
        android:layout_marginEnd="10dp"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/txtSUN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstN"
        android:layout_toEndOf="@id/txtTN"
        android:ems="4"
        android:inputType="text"
        />
    <TextView
    android:id="@+id/dataB"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/date_of_birth"
    android:layout_below="@id/txtFN"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="5dp"
    />
    <EditText
        android:id="@+id/txtDOB"
        android:layout_below="@id/txtFN"
        android:layout_toEndOf="@id/dataB"
        android:ems="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        />

    <TextView
        android:id="@+id/CounB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country_of_birth"
        android:layout_below="@id/txtFN"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/txtDOB"
        />
    <EditText
        android:id="@+id/txtCOB"
        android:layout_below="@id/txtFN"
        android:layout_toEndOf="@id/CounB"
        android:ems="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/CPR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpr"
        android:layout_below="@id/dataB"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        />
    <EditText
        android:id="@+id/txtCPR"
        android:layout_below="@id/dataB"
        android:layout_toEndOf="@id/dataB"
        android:ems="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/nath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nation"
        android:layout_below="@id/dataB"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/txtDOB"
        />
    <EditText
        android:id="@+id/txtNa"
        android:layout_below="@id/dataB"
        android:layout_toEndOf="@id/CounB"
        android:ems="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/passNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passNumber"
        android:layout_below="@id/CPR"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        />
    <EditText
        android:id="@+id/txtPas"
        android:layout_below="@id/CPR"
        android:layout_toEndOf="@id/passNo"
        android:ems="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/passED"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passExpDate"
        android:layout_below="@id/CPR"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/txtPas"
        />
    <EditText
        android:id="@+id/txtpassNa"
        android:layout_below="@id/CPR"
        android:layout_toEndOf="@id/passED"
        android:ems="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        />

    <TextView
        android:id="@+id/reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/religion"
        android:layout_below="@id/passED"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        />
    <EditText
        android:id="@+id/txtReg"
        android:layout_below="@id/passED"
        android:layout_toEndOf="@id/reg"
        android:ems="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        />
    <TextView
        android:id="@+id/marS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marita"
        android:layout_below="@id/passED"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/txtReg"
        />
    <EditText
        android:id="@+id/txtMS"
        android:layout_below="@id/passED"
        android:layout_toEndOf="@id/marS"
        android:ems="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        />
    <TextView
        android:id="@+id/motherName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mNameFull"
        android:layout_below="@id/reg"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        />
    <EditText
        android:id="@+id/txtMoN"
        android:layout_below="@id/reg"
        android:layout_toEndOf="@id/motherName"
        android:ems="9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        />
    <TextView
        android:id="@+id/perAdr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permAddres"
        android:layout_below="@id/motherName"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        />
    <TextView
        android:id="@+id/corAddr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coAdress"
        android:layout_below="@id/motherName"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/perAdr"
        android:layout_marginStart="49dp"
        />
    <TextView
        android:id="@+id/handf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hf"
        android:layout_below="@id/perAdr"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        />
    <EditText
        android:id="@+id/txthf1"
        android:layout_below="@id/perAdr"
        android:layout_toEndOf="@id/handf"
        android:ems="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        />
    <TextView
        android:id="@+id/handf2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hf"
        android:layout_below="@id/corAddr"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/txthf1"
        />
    <EditText
        android:id="@+id/txthf2"
        android:layout_below="@id/corAddr"
        android:layout_toEndOf="@id/handf2"
        android:ems="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        />
    <TextView
        android:id="@+id/build1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build"
        android:layout_below="@id/handf"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        />
    <EditText
        android:id="@+id/txtbuild"
        android:layout_below="@id/handf"
        android:layout_toEndOf="@id/build1"
        android:ems="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        />
    <TextView
        android:id="@+id/build2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build"
        android:layout_below="@id/handf"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/txtbuild"
        />
    <EditText
        android:id="@+id/txtbuild2"
        android:layout_below="@id/handf2"
        android:layout_toEndOf="@id/build2"
        android:ems="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/road1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/road"
        android:layout_below="@id/build1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        />
    <EditText
        android:id="@+id/txtroad"
        android:layout_below="@id/txtbuild"
        android:layout_toEndOf="@id/road1"
        android:ems="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="13dp"
        />

    <TextView
        android:id="@+id/road2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/road"
        android:layout_below="@id/build2"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/txtbuild"
        android:layout_marginLeft="5dp"
        />
    <EditText
        android:id="@+id/txtroad2"
        android:layout_below="@id/txtbuild2"
        android:layout_toEndOf="@id/road2"
        android:ems="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="13dp"
        />

    <TextView
        android:id="@+id/block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blck"
        android:layout_below="@id/road1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"

        />
    <EditText
        android:id="@+id/txtblock"
        android:layout_below="@id/road1"
        android:layout_toEndOf="@id/block"
        android:ems="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/block1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blck"
        android:layout_below="@id/road1"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/txtbuild"
        />
    <EditText
        android:id="@+id/txtblock1"
        android:layout_below="@id/road1"
        android:layout_toEndOf="@id/block1"
        android:ems="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/area"
        android:layout_below="@id/block"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"

        />
    <EditText
        android:id="@+id/txtarea"
        android:layout_below="@id/block"
        android:layout_toEndOf="@id/area"
        android:ems="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/area1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/area"
        android:layout_below="@id/block1"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/txtbuild"
        />
    <EditText
        android:id="@+id/txtarea1"
        android:layout_below="@id/block1"
        android:layout_toEndOf="@id/area1"
        android:ems="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coun"
        android:layout_below="@id/area"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"

        />
    <EditText
        android:id="@+id/txtcoun"
        android:layout_below="@id/area"
        android:layout_toEndOf="@id/country"
        android:ems="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/country1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coun"
        android:layout_below="@id/area1"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/txtbuild"
        />
    <EditText
        android:id="@+id/txtcoun1"
        android:layout_below="@id/area1"
        android:layout_toEndOf="@id/country1"
        android:ems="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        />
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_alignParentBottom="true"
        android:onClick="Submit"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearrrr"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/button1"
        android:layout_marginLeft="5dp"
        android:onClick="clear"
        />





</RelativeLayout>